# ARC-Capital

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml  pyproject.toml  skills-lock.json
.agents/skills/openbb-app-builder/: SKILL.md
.claude/: settings.local.json
data/: approval_queue.json  core_principles.md  growth_leading_indicators.yaml  inflation_leading_indicators.yaml  ism_manufacturing_pmi.csv  macro_leading_indicators.yaml  regime_sector_cheat_sheet.yaml
data/lexicons/: fed_pressure_v1.yaml  hawkish_dovish_v1.yaml  regulatory_stance_v1.yaml  trade_protectionist_v1.yaml
docs/plans/: 2026-05-03-castelino-capital-design.md  2026-05-05-fred-calendar-integration.md  2026-05-05-openbb-integration-design.md  2026-05-05-openbb-integration-plan.md  2026-05-07-custom-frontend-design.md  2026-05-07-enrichment-polymarket-x-design.md  2026-05-07-fed-speech-listener-design.md  2026-05-07-fed-speech-listener-plan.md  2026-05-07-risk-off-gate-design.md  2026-05-07-sonar-deep-read-design.md  2026-05-07-technical-readiness-design.md  2026-05-07-trigger-redesign.md  2026-05-08-persona-agents-design.md  2026-05-08-persona-agents-plan.md  2026-05-08-persona-standalone-chat-design.md  2026-05-08-persona-standalone-chat-plan.md  2026-05-30-deep-research-agent-design.md  2026-05-30-deep-research-agent.md  2026-05-31-thesis-charts-design.md  2026-05-31-thesis-charts.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  endpoints.ts  personas.ts  types.ts
frontend/src/components/: ApprovalCard.tsx  ConvictionLedger.tsx  CreateRoomModal.tsx  EquityCurveChart.tsx  KpiCard.tsx  MacroIndicatorsTable.tsx  PanelDiscussionModal.tsx  PersonaChat.tsx  PersonaPicker.tsx  PersonaStandaloneChatDrawer.tsx  PositionsTable.tsx  RecentFills.tsx  RegimeQuadrant.tsx  RiskOffGauge.tsx  ThesisCharts.tsx
frontend/src/hooks/: useAgents.ts  useApprovals.ts  useMacro.ts  usePanelDiscussion.ts  usePersonaChat.ts  usePersonaRoom.ts  usePersonaStandaloneChat.ts  usePortfolio.ts  useResearch.ts  useRisk.ts
frontend/src/lib/: format.ts
frontend/src/pages/: AgentsPage.tsx  ApprovalCenterPage.tsx  ApprovalConsultPage.tsx  DeepResearchPage.tsx  MacroPage.tsx  PersonasPage.tsx  PlaceholderPage.tsx  PortfolioPage.tsx  (+4 more)
scripts/: build_historical_prices.py  build_ism_pmi_proxy.py  build_nyt_archive.py  build_sonar_trump_archive.py  migrate_persona_layout.py  replay.py  reset_demo.py  run_backtest_full.sh  seed_book.py
src/castelino/: __init__.py  config.py
tests/: test_accounting_invariant.py  test_approval_queue.py  test_broker_fills.py  test_chat_config.py  test_chat_market_overview.py  test_chat_models.py  test_chat_persona_discuss.py  test_chat_registry.py  test_chat_registry_callables.py  test_chat_repl_slash.py  test_chat_research_clarify.py  test_chat_router.py  test_chat_session.py  test_chat_splash.py  test_cli_approval.py  test_curator_and_reports.py  test_dashboard_app.py  test_deep_research_chart_cli.py  test_deep_research_chart_config.py  test_deep_research_chart_endpoint.py  test_deep_research_chart_models.py  test_deep_research_chart_orchestrator.py  test_deep_research_chart_resolver.py  test_deep_research_chart_synth.py  test_deep_research_clarifier.py  test_deep_research_cli.py  test_deep_research_config.py  test_deep_research_endpoints.py  test_deep_research_lead.py  test_deep_research_models.py  test_deep_research_orchestrator_failure.py  test_deep_research_orchestrator_finish.py  test_deep_research_orchestrator_research.py  test_deep_research_orchestrator_start.py  test_deep_research_run_sync.py  test_deep_research_sonar_client.py  test_deep_research_store.py  test_deep_research_sub_agent.py  test_deep_research_synthesizer.py  test_figure_deviation_baseline_store.py  (+81 more)
tests/backtest/: _builders.py  conftest.py  test_cli.py  test_conftest_helpers.py  test_figure_deviation_backtest.py  test_figure_deviation_runner.py  test_materialize_order_backtest.py  test_models.py  test_report.py  test_risk_off_backtest.py  test_risk_off_runner.py
tests/integration/: test_openbb_dashboard_e2e.py  test_speech_replay_e2e.py
(+188 files in other folders)
