[project]
name = "castelino-capital"
version = "0.1.0"
description = "Multi-agent macro fund built as a LangGraph DAG of LLM agents (portfolio piece)."
authors = [{ name = "Ashley Castelino", email = "ashleyn4@illinois.edu" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"

dependencies = [
    # Core
    "pydantic>=2.7,<3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
    # Numerics & data
    "numpy>=1.26",
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "pyarrow>=15",
    "requests>=2.31",
    "feedparser>=6.0",
    "openbb-platform-api",
    # LLM + DAG
    "openai>=1.40",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # Forecast models (regime nowcaster)
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    # Reporting
    "matplotlib>=3.8",
    "jinja2>=3.1",
    # Dashboard (OpenBB Workspace backend)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
castelino = "castelino.orchestrator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/castelino"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
markers = [
    "live: hits real OpenAI / network (skip in CI)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]
