[project]
name = "castelino-capital"
version = "0.1.0"
description = "Multi-agent macro fund built as a LangGraph DAG of LLM agents (portfolio piece)."
authors = [{ name = "Ashley Castelino", email = "ashleyn4@illinois.edu" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"

dependencies = [
    # Core
    "pydantic>=2.7,<3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
    # Numerics & data
    "numpy>=1.26",
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "pyarrow>=15",
    "requests>=2.31",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12,<5",
    "httpx>=0.27,<1",
    "openbb-platform-api",
    # OpenBB data extensions (providers + routers). Without these, `from openbb
    # import obb` yields a bare App with no `.equity`/`.economy` — every adapter
    # call fails. Required for thesis charts and the research/macro data pulls.
    "openbb-equity>=1.6",
    "openbb-economy>=1.6",
    "openbb-yfinance>=1.6",
    "openbb-fred>=1.6",
    # LLM + DAG
    "openai>=1.40",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # Forecast models (regime nowcaster)
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    # Reporting
    "matplotlib>=3.8",
    "jinja2>=3.1",
    # Dashboard (OpenBB Workspace backend)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "plotly>=5.18",
    # Speech-to-text (Fed speech listener)
    "deepgram-sdk>=3,<4",
    # Vector store (persona memory)
    "chromadb>=0.5,<1",
    # PDF parsing (persona scrapers — Buffett, Dalio Principles)
    "pypdf>=4,<6",
    # YouTube transcript fetching (Druckenmiller, Tudor Jones interviews)
    "youtube-transcript-api>=0.6,<1",
    # RSS / Atom feed parsing (Krugman, El-Erian, Summers op-eds)
    "feedparser>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
ckm = "castelino.orchestrator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/castelino"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
markers = [
    "live: hits real OpenAI / network (skip in CI)",
    "backtest: regression suite over deterministic components (run separately in CI)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]
